apps/production/babybuddy/babybuddy-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: babybuddy
  namespace: babybuddy
  annotations:
    gethomepage.dev/href: "https://babybuddy.hephlab.duckdns.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Baby Buddy"
    gethomepage.dev/description: "Application for tracking baby care activities."
    gethomepage.dev/app: babybuddy
    gethomepage.dev/group: "Dynamic"
    gethomepage.dev/icon: "https://github.com/babybuddy/babybuddy/blob/master/static/babybuddy/img/core/child-placeholder.png?raw=true"  # Adjust or replace with an appropriate icon URL
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`babybuddy.hephlab.duckdns.org`)
      kind: Rule
      services:
        - name: babybuddy
          port: 80
